--- a/PAGES/5bc_initializing/index.html
+++ b/PAGES/5bc_initializing/index.html
@@ -1362,11 +1362,11 @@ section a:hover{
                         </tr>
                         <tr>
                             <td class="tg-8jgo">Open All Codes and Outputs in a Post</td>
-                            <td class="tg-ofj5"><kbd>Ctrl + 🠙</kbd></td>
+                            <td class="tg-ofj5"><kbd>Alt + 🠙</kbd></td>
                         </tr>
                         <tr>
                             <td class="tg-8jgo">Close All Codes and Outputs in a Post</td>
-                            <td class="tg-ofj5"><kbd>Ctrl + 🠛</kbd></td>
+                            <td class="tg-ofj5"><kbd>Alt + 🠛</kbd></td>
                         </tr>                                          
                     </tbody>
                 </table>
@@ -2050,7 +2050,7 @@ color: white;
 {{end}} -->
 
 <div class="franklin-content">
-<section id="introduction" class="scrollspy section-bg-color">
+<section id="introduction" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2061,7 +2061,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="initializing_vectors" class="scrollspy">
+<section id="initializing_vectors" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2097,7 +2097,7 @@ x &#61; similar&#40;y&#41;                      # &#96;x&#96; has the same type 
     </div>
   </div>
 </section>
-<section id="creating_vectors" class="scrollspy section-bg-color">
+<section id="creating_vectors" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2308,7 +2308,7 @@ x                &#61; repeat&#40;vector_to_repeat, nr_repetitions&#41;</code></
     </div>
   </div>
 </section>
-<section id="adding_removing_and_replacing_elements_optional" class="scrollspy">
+<section id="adding_removing_and_replacing_elements_optional" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2492,7 +2492,7 @@ y &#61; replace&#40;x, 3 &#61;&gt; 0, 5 &#61;&gt; 1&#41;   # new copy</code></pr
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"> Previous Section (<kbd>Ctrl + 🠘</kbd>)</a></span>
        <span class="right-text"><a href="/julia_book/PAGES\6a0_slices" class="nextPage">Next Section (<kbd>Ctrl + 🠚</kbd>)<img src="/julia_book/assets/icons/next-page.png"
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"></a>    </span>              
-    <span class="center-text">  © Martin Alfaro <br>Last Modified April 26, 2024 </span>  
+    <span class="center-text">  © Martin Alfaro <br>Last Modified April 27, 2024 </span>  
   </div>
 <!-- </p>  -->
 </footer>
@@ -2825,10 +2825,10 @@ window.addEventListener('resize', setHeight);
   }
 </script>
 
-<!-- to close all the elements in a class "details" using "Ctrl" + "Up Arrow" -->
+<!-- to close all the elements in a class "details" using "Alt" + "Up Arrow" -->
 <script>
 document.addEventListener("keydown", function(event) {
-  if (event.code === "ArrowUp" && event.ctrlKey) {    
+  if (event.code === "ArrowUp" && event.altKey) {    
     var details = document.getElementsByTagName("details");
     for (var i = 0; i < details.length; i++) {
         details[i].open = false;
@@ -2839,10 +2839,10 @@ document.addEventListener("keydown", function(event) {
 
 
 
-<!-- to open all the elements in a class "details" using "Ctrl" + "Down Arrow" -->
+<!-- to open all the elements in a class "details" using "Alt" + "Down Arrow" -->
 <script>
     document.addEventListener("keydown", function(event) {
-  if (event.code === "ArrowDown" && event.ctrlKey) {
+  if (event.code === "ArrowDown" && event.altKey) {
     var details = document.getElementsByTagName("details");
     for (var i = 0; i < details.length; i++) {
         details[i].open = true;
