--- a/PAGES/6d_application01/index.html
+++ b/PAGES/6d_application01/index.html
@@ -1362,11 +1362,11 @@ section a:hover{
                         </tr>
                         <tr>
                             <td class="tg-8jgo">Open All Codes and Outputs in a Post</td>
-                            <td class="tg-ofj5"><kbd>Ctrl + 🠙</kbd></td>
+                            <td class="tg-ofj5"><kbd>Alt + 🠙</kbd></td>
                         </tr>
                         <tr>
                             <td class="tg-8jgo">Close All Codes and Outputs in a Post</td>
-                            <td class="tg-ofj5"><kbd>Ctrl + 🠛</kbd></td>
+                            <td class="tg-ofj5"><kbd>Alt + 🠛</kbd></td>
                         </tr>                                          
                     </tbody>
                 </table>
@@ -2052,7 +2052,7 @@ color: white;
 <div class="franklin-content">
  <div class=note>  <div class=title>  <span class="note_title" style="font-weight:500;">
       <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px;">      
-      <b>Remark</b> </span>  </div>  <div class=content>     This section&#39;s scripts are available <a href="https://github.com/alfaromartino/julia_book/tree/main//assets/PAGES/6d_application01/codeDownload"><strong>here</strong></a>, under the name <code>allCode.jl</code>. They&#39;ve been tested under Julia 1.10.0.<br/><br/> For more accurate benchmarks, each variable is wrapped in <code>ref&#40;x&#41; &#61; &#40;Ref&#40;x&#41;&#41;&#91;&#93;</code> and interpolated through <code>&#36;</code>.  </div>  </div>
+      <b>Remark</b> </span>  </div>  <div class=content>     This section&#39;s scripts are available <a href="https://github.com/alfaromartino/julia_book/tree/main//assets/PAGES/6d_application01/codeDownload"><strong>here</strong></a>, under the name <code>allCode.jl</code>. They&#39;ve been tested under Julia 1.10.0.<br/><br/> For more accurate benchmarks, each variable <code>x</code> is wrapped in <code>ref&#40;x&#41; &#61; &#40;Ref&#40;x&#41;&#41;&#91;&#93;</code> and interpolated through <code>&#36;</code>.  </div>  </div>
 <section id="introduction" class="scrollspy">
   <div class="container">
     <div class="row">
@@ -2391,7 +2391,7 @@ stats_views      &#61; NamedTuple&#40;vector_of_tuples&#41;</code></pre> </div> 
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"> Previous Section (<kbd>Ctrl + 🠘</kbd>)</a></span>
        <span class="right-text"><a href="/julia_book/PAGES\7a_introToPerformace" class="nextPage">Next Section (<kbd>Ctrl + 🠚</kbd>)<img src="/julia_book/assets/icons/next-page.png"
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"></a>    </span>              
-    <span class="center-text">  © Martin Alfaro <br>Last Modified April 26, 2024 </span>  
+    <span class="center-text">  © Martin Alfaro <br>Last Modified April 27, 2024 </span>  
   </div>
 <!-- </p>  -->
 </footer>
@@ -2724,10 +2724,10 @@ window.addEventListener('resize', setHeight);
   }
 </script>
 
-<!-- to close all the elements in a class "details" using "Ctrl" + "Up Arrow" -->
+<!-- to close all the elements in a class "details" using "Alt" + "Up Arrow" -->
 <script>
 document.addEventListener("keydown", function(event) {
-  if (event.code === "ArrowUp" && event.ctrlKey) {    
+  if (event.code === "ArrowUp" && event.altKey) {    
     var details = document.getElementsByTagName("details");
     for (var i = 0; i < details.length; i++) {
         details[i].open = false;
@@ -2738,10 +2738,10 @@ document.addEventListener("keydown", function(event) {
 
 
 
-<!-- to open all the elements in a class "details" using "Ctrl" + "Down Arrow" -->
+<!-- to open all the elements in a class "details" using "Alt" + "Down Arrow" -->
 <script>
     document.addEventListener("keydown", function(event) {
-  if (event.code === "ArrowDown" && event.ctrlKey) {
+  if (event.code === "ArrowDown" && event.altKey) {
     var details = document.getElementsByTagName("details");
     for (var i = 0; i < details.length; i++) {
         details[i].open = true;
