--- a/PAGES/3a_variables/index.html
+++ b/PAGES/3a_variables/index.html
@@ -1362,11 +1362,11 @@ section a:hover{
                         </tr>
                         <tr>
                             <td class="tg-8jgo">Open All Codes and Outputs in a Post</td>
-                            <td class="tg-ofj5"><kbd>Ctrl + 🠙</kbd></td>
+                            <td class="tg-ofj5"><kbd>Alt + 🠙</kbd></td>
                         </tr>
                         <tr>
                             <td class="tg-8jgo">Close All Codes and Outputs in a Post</td>
-                            <td class="tg-ofj5"><kbd>Ctrl + 🠛</kbd></td>
+                            <td class="tg-ofj5"><kbd>Alt + 🠛</kbd></td>
                         </tr>                                          
                     </tbody>
                 </table>
@@ -2207,7 +2207,7 @@ x -&#61; 3        # equivalent</code></pre>
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"> Previous Section (<kbd>Ctrl + 🠘</kbd>)</a></span>
        <span class="right-text"><a href="/julia_book/PAGES\3b_univariables" class="nextPage">Next Section (<kbd>Ctrl + 🠚</kbd>)<img src="/julia_book/assets/icons/next-page.png"
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"></a>    </span>              
-    <span class="center-text">  © Martin Alfaro <br>Last Modified April 26, 2024 </span>  
+    <span class="center-text">  © Martin Alfaro <br>Last Modified April 27, 2024 </span>  
   </div>
 <!-- </p>  -->
 </footer>
@@ -2540,10 +2540,10 @@ window.addEventListener('resize', setHeight);
   }
 </script>
 
-<!-- to close all the elements in a class "details" using "Ctrl" + "Up Arrow" -->
+<!-- to close all the elements in a class "details" using "Alt" + "Up Arrow" -->
 <script>
 document.addEventListener("keydown", function(event) {
-  if (event.code === "ArrowUp" && event.ctrlKey) {    
+  if (event.code === "ArrowUp" && event.altKey) {    
     var details = document.getElementsByTagName("details");
     for (var i = 0; i < details.length; i++) {
         details[i].open = false;
@@ -2554,10 +2554,10 @@ document.addEventListener("keydown", function(event) {
 
 
 
-<!-- to open all the elements in a class "details" using "Ctrl" + "Down Arrow" -->
+<!-- to open all the elements in a class "details" using "Alt" + "Down Arrow" -->
 <script>
     document.addEventListener("keydown", function(event) {
-  if (event.code === "ArrowDown" && event.ctrlKey) {
+  if (event.code === "ArrowDown" && event.altKey) {
     var details = document.getElementsByTagName("details");
     for (var i = 0; i < details.length; i++) {
         details[i].open = true;
