--- a/PAGES/5b_conditionals/index.html
+++ b/PAGES/5b_conditionals/index.html
@@ -1362,11 +1362,11 @@ section a:hover{
                         </tr>
                         <tr>
                             <td class="tg-8jgo">Open All Codes and Outputs in a Post</td>
-                            <td class="tg-ofj5"><kbd>Ctrl + 🠙</kbd></td>
+                            <td class="tg-ofj5"><kbd>Alt + 🠙</kbd></td>
                         </tr>
                         <tr>
                             <td class="tg-8jgo">Close All Codes and Outputs in a Post</td>
-                            <td class="tg-ofj5"><kbd>Ctrl + 🠛</kbd></td>
+                            <td class="tg-ofj5"><kbd>Alt + 🠛</kbd></td>
                         </tr>                                          
                     </tbody>
                 </table>
@@ -2050,7 +2050,7 @@ color: white;
 {{end}} -->
 
 <div class="franklin-content">
-<section id="introduction" class="scrollspy">
+<section id="introduction" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2073,7 +2073,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="if-then_statements" class="scrollspy section-bg-color">
+<section id="if-then_statements" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2123,7 +2123,7 @@ end</code></pre>
     </div>
   </div>
 </section>
-<section id="if-else_statements" class="scrollspy">
+<section id="if-else_statements" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2230,7 +2230,7 @@ x_absolute_value &#61; absolute_value.&#40;x&#41;</code></pre>
     </div>
   </div>
 </section>
-<section id="if-else-if_statements" class="scrollspy section-bg-color">
+<section id="if-else-if_statements" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2281,7 +2281,7 @@ end</code></pre>
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"> Previous Section (<kbd>Ctrl + 🠘</kbd>)</a></span>
        <span class="right-text"><a href="/julia_book/PAGES\5c_forLoops" class="nextPage">Next Section (<kbd>Ctrl + 🠚</kbd>)<img src="/julia_book/assets/icons/next-page.png"
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"></a>    </span>              
-    <span class="center-text">  © Martin Alfaro <br>Last Modified April 26, 2024 </span>  
+    <span class="center-text">  © Martin Alfaro <br>Last Modified April 27, 2024 </span>  
   </div>
 <!-- </p>  -->
 </footer>
@@ -2614,10 +2614,10 @@ window.addEventListener('resize', setHeight);
   }
 </script>
 
-<!-- to close all the elements in a class "details" using "Ctrl" + "Up Arrow" -->
+<!-- to close all the elements in a class "details" using "Alt" + "Up Arrow" -->
 <script>
 document.addEventListener("keydown", function(event) {
-  if (event.code === "ArrowUp" && event.ctrlKey) {    
+  if (event.code === "ArrowUp" && event.altKey) {    
     var details = document.getElementsByTagName("details");
     for (var i = 0; i < details.length; i++) {
         details[i].open = false;
@@ -2628,10 +2628,10 @@ document.addEventListener("keydown", function(event) {
 
 
 
-<!-- to open all the elements in a class "details" using "Ctrl" + "Down Arrow" -->
+<!-- to open all the elements in a class "details" using "Alt" + "Down Arrow" -->
 <script>
     document.addEventListener("keydown", function(event) {
-  if (event.code === "ArrowDown" && event.ctrlKey) {
+  if (event.code === "ArrowDown" && event.altKey) {
     var details = document.getElementsByTagName("details");
     for (var i = 0; i < details.length; i++) {
         details[i].open = true;
