--- a/index.html
+++ b/index.html
@@ -1934,7 +1934,7 @@ section{
 </li>
 <li><p><a href="https://m3g.github.io/JuliaNotes.jl/stable/">https://m3g.github.io/JuliaNotes.jl/stable/</a>: Some notes by <strong>Leandro Martínez</strong>, an active user in Julia&#39;s Discourse. The notes are cleaned versions of discussions and lessons learned from posts in Discourse. </p>
 </li>
-<li><p><a href="https://emmettgb.medium.com/">https://emmettgb.medium.com/</a>: Blog by <strong>Emmett Boudreau</strong>, with some interesting comparisons between Julia and other languages.</p>
+<li><p><a href="https://medium.com/@emmaccode/">https://medium.com/@emmaccode/</a>: Blog by <strong>Emma Boudreau</strong>, with some interesting comparisons between Julia and other languages.</p>
 </li>
 </ul>
 <p><br/> The following are websites about Julia in  <em>Economics</em>, which is my area of specialization.</p>
