--- a/PAGES/5b_conditionals/index.html
+++ b/PAGES/5b_conditionals/index.html
@@ -2050,7 +2050,7 @@ color: white;
 {{end}} -->
 
 <div class="franklin-content">
-<section id="introduction" class="scrollspy">
+<section id="introduction" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2073,7 +2073,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="if-then_statements" class="scrollspy section-bg-color">
+<section id="if-then_statements" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2123,7 +2123,7 @@ end</code></pre>
     </div>
   </div>
 </section>
-<section id="if-else_statements" class="scrollspy">
+<section id="if-else_statements" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2230,7 +2230,7 @@ x_absolute_value &#61; absolute_value.&#40;x&#41;</code></pre>
     </div>
   </div>
 </section>
-<section id="if-else-if_statements" class="scrollspy section-bg-color">
+<section id="if-else-if_statements" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
