--- a/PAGES/6e_useful_funs/index.html
+++ b/PAGES/6e_useful_funs/index.html
@@ -2050,7 +2050,7 @@ color: white;
 {{end}} -->
 
 <div class="franklin-content">
-<section id="introduction" class="scrollspy section-bg-color">
+<section id="introduction" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2060,7 +2060,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="sorting_vectors" class="scrollspy">
+<section id="sorting_vectors" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2153,7 +2153,7 @@ y      &#61; sort&#40;x, by &#61; foo&#41;      # same as sort&#40;x, by &#61; x
     </div>
   </div>
 </section>
-<section id="indices_of_sorted_elements" class="scrollspy section-bg-color">
+<section id="indices_of_sorted_elements" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2312,7 +2312,7 @@ days_by_failures &#61; days&#91;index&#93;                     # days sorted by 
     </div>
   </div>
 </section>
-<section id="unique_vectors" class="scrollspy">
+<section id="unique_vectors" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2398,7 +2398,7 @@ occurrences &#61; collect&#40;values&#40;y&#41;&#41;</code></pre> </div></div>
     </div>
   </div>
 </section>
-<section id="rounding_numbers" class="scrollspy section-bg-color">
+<section id="rounding_numbers" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2461,7 +2461,7 @@ ceil&#40;x, sigdigits&#61;2&#41;             # 460.0</code></pre> </div></div>
     </div>
   </div>
 </section>
-<section id="rankings" class="scrollspy">
+<section id="rankings" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2546,7 +2546,7 @@ y &#61; sortperm&#40;x&#41;</code></pre> </div></div>
     </div>
   </div>
 </section>
-<section id="extrema_maximum_and_minimum" class="scrollspy section-bg-color">
+<section id="extrema_maximum_and_minimum" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
