--- a/PAGES/6f_pipes/index.html
+++ b/PAGES/6f_pipes/index.html
@@ -1975,7 +1975,7 @@ color: white;
   }
 
   
-  .bar_top .modal-body .row{display:flex;}    
+  .bar_top .modal-body .row{display: flex;}    
   .bar_top .modal-body .row .column{flex:1;}  /* equal size of columns*/
   
   
@@ -1987,14 +1987,14 @@ color: white;
     list-style-type: none;
     margin         : 0;
     padding        : 0;
-    padding-top    : 0.8em;
+    padding-top    : 1em;
     padding-bottom : 0.4em;
     line-height    : 1.5;}
 
   .bar_top .modal-body .row li {
-    line-height    : 0.65;    
+    line-height    : 0.38;
     list-style-type: none;
-    float          : inline-start;
+    float          : center;
     text-indent    : -20px;
     padding-left   : 20px;
     position       : relative;
@@ -2292,7 +2292,7 @@ end</code></pre> </div></div>
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"> Previous Section (<kbd>Ctrl + 🠘</kbd>)</a></span>
        <span class="right-text"><a href="/julia_book/PAGES\6e_useful_funs" class="nextPage">Next Section (<kbd>Ctrl + 🠚</kbd>)<img src="/julia_book/assets/icons/next-page.png"
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"></a>    </span>              
-    <span class="center-text">  © Martin Alfaro <br>Last Modified April 27, 2024 </span>  
+    <span class="center-text">  © Martin Alfaro <br>Last Modified April 28, 2024 </span>  
   </div>
 <!-- </p>  -->
 </footer>
