--- a/PAGES/6d_application01/index.html
+++ b/PAGES/6d_application01/index.html
@@ -1975,7 +1975,7 @@ color: white;
   }
 
   
-  .bar_top .modal-body .row{display:flex;}    
+  .bar_top .modal-body .row{display: flex;}    
   .bar_top .modal-body .row .column{flex:1;}  /* equal size of columns*/
   
   
@@ -1987,14 +1987,14 @@ color: white;
     list-style-type: none;
     margin         : 0;
     padding        : 0;
-    padding-top    : 0.8em;
+    padding-top    : 1em;
     padding-bottom : 0.4em;
     line-height    : 1.5;}
 
   .bar_top .modal-body .row li {
-    line-height    : 0.65;    
+    line-height    : 0.38;
     list-style-type: none;
-    float          : inline-start;
+    float          : center;
     text-indent    : -20px;
     padding-left   : 20px;
     position       : relative;
@@ -2090,7 +2090,7 @@ this is invisible this is invisible this is invisible this is invisible this is 
 <li><p><code>pay_per_views</code>: Dollars paid per video for 1,000 views, ranging from &#36;2 to &#36;6. The fluctuation is consistent with YouTube&#39;s payment model, which depends on a video&#39;s feature &#40;e.g., content, duration, retention&#41;.</p>
 </li>
 </ul></div>
-<p>The scenario is modeled by generating some mock data. The details of how data are created are unimportant, but added below for the sake of completeness.</p>
+<p>The scenario is modeled by some mock data. The details of how data are generated are unimportant, but added below for the sake of completeness.</p>
  <div class=" code_box"> <details  closed><summary> Mock Data Creation  </summary> <div class="code_inline"><div class="code_NoFormat"><pre><code class="language-julia">using StatsBase, Distributions
 using Random; Random.seed&#33;&#40;1234&#41;
 
@@ -2107,7 +2107,7 @@ nr_videos &#61; 30
 
 views_per_video &#61; audience&#40;nr_videos, median_target &#61; 50&#41;      # in thousands of views
 pay_per_views   &#61; rand&#40;2:6, nr_videos&#41;                         # per thousands of views</code></pre> </div> </div>  </details></div>
-<p>The code defines the following two variables.</p>
+<p>What matters is that the mock data creates the following two variables.</p>
 <p><div class="output_in_modal"><div class="sign_output">Output in REPL </div>  <div class="mixed_output_inline"><div class="mixed_output_NoFormat"><span style="color:rgb(32, 198, 121) !important; font-weight: bold;">julia&gt</span> <code>views_per_video</code> # in thousands <br/> <pre><code class="plaintext code-output">30-element Vector{Float64}:
  44.4608
  57.2323
@@ -2329,7 +2329,7 @@ specific_days    &#61; stats_subset&#40;views_per_video, pay_per_views, is_day&#
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Mutating Variables</h2></p>
-<p>Suppose that, seeking to enhance audience engagement, Johnny has decided to promote his videos through advertising. His projections suggest that ads will boost his viewership per video by 20&#37;. However, due to budget constraints, Johnny must choose between promoting his non-viral videos or his viral ones. To make an informed decision, Johnny decides to leverage the data at his disposal to crunch some rough estimates. In particular, he&#39;ll base his decision on the earnings he would&#39;ve earned during last month if he had run targeted ads.</p>
+<p>Suppose that, seeking to enhance audience engagement, Johnny has decided to promote his videos through advertising. His projections suggest that ads will boost viewership per video by 20&#37;. However, due to budget constraints, Johnny must choose between promoting either his non-viral videos or his viral ones. To make an informed decision, Johnny decides to leverage the data at his disposal to crunch some rough estimates. In particular, he&#39;ll base his decision on the earnings he would&#39;ve earned during last month if he had run targeted ads.</p>
 <p>The computations require creating a modified copy of <code>views_per_video</code>, adjusting the audience data after running the ads for the targeted videos. With this updated audience data, we can then apply the previously defined <code>stats_subset</code> function to estimate the potential earnings. Comparing the results in each tab, Johnny would conclude that promoting viral videos seems to be a more profitable strategy.</p>
  <div class=" hide_tab"> <details  open><summary  >  </summary>  <p></p>
  <div class="tab_wrapper">
@@ -2441,7 +2441,7 @@ stats_views      &#61; &#91;fun.&#40;&#91;views_per_video, pay_per_views&#93;&#4
  [541.714, 6.0]
  [27.7205, 2.0]</code></pre> </div></div> </div>   </details></div>
 <p>One major limitation of the current method is its inability to capture each statistic&#39;s name. To overcome this, we can employ a named tuple, which we&#39;ll call <code>stats_views</code>. The approach enables us to access stats through their respective names, such as <code>stats_views.mean</code> or <code>stats_views&#91;:mean&#93;</code> for the average value. </p>
-<p>The implementation is based on the type <code>Symbol</code>. This converts strings into identifiers, which is necessary to programmatically access a named tuple&#39;s keys.</p>
+<p>The implementation is based on the type <code>Symbol</code>. This converts strings into identifiers, which are necessary to programmatically access a named tuple&#39;s keys.</p>
  <div class=" code_box"> <details  open><summary> Descriptive Statistics  </summary> <div class="code_inline"><div class="code_NoFormat"><pre><code class="language-julia">vector_of_tuples &#61; &#91;&#40;Symbol&#40;fun&#41;, fun&#40;views_per_video&#41;&#41; for fun in list_functions&#93;
 stats_views      &#61; NamedTuple&#40;vector_of_tuples&#41;</code></pre> </div> </div> <div class="output_in_modal"><div class="sign_output">Output in REPL </div>  <div class="mixed_output_inline"><div class="mixed_output_NoFormat"><span style="color:rgb(32, 198, 121) !important; font-weight: bold;">julia&gt</span> <code>stats_views</code> <br/> <pre><code class="plaintext code-output">(sum = 2661.48, median = 52.7884, mean = 88.716, maximum = 541.714, minimum = 27.7205)</code></pre> </div></p>
 <div class="mixed_output_NoFormat"><span style="color:rgb(32, 198, 121) !important; font-weight: bold;">julia&gt</span> <code>stats_views.mean</code> <br/> <pre><code class="plaintext code-output">88.716</code></pre> </div>
@@ -2458,7 +2458,7 @@ stats_views      &#61; NamedTuple&#40;vector_of_tuples&#41;</code></pre> </div> 
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"> Previous Section (<kbd>Ctrl + 🠘</kbd>)</a></span>
        <span class="right-text"><a href="/julia_book/PAGES\7a_introToPerformace" class="nextPage">Next Section (<kbd>Ctrl + 🠚</kbd>)<img src="/julia_book/assets/icons/next-page.png"
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"></a>    </span>              
-    <span class="center-text">  © Martin Alfaro <br>Last Modified April 27, 2024 </span>  
+    <span class="center-text">  © Martin Alfaro <br>Last Modified April 28, 2024 </span>  
   </div>
 <!-- </p>  -->
 </footer>
